--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,10 +18,9 @@
         "react"
     ],
     "rules": {
-        "no-use-before-define": 0,
-        "indent": [
-            "error",
-            4,
-        ]
+      "no-use-before-define": 0,
+      "react/function-component-definition": [
+          2, { "namedComponents": "function-declaration" }
+      ]
     }
 }
